Fix play button size on mobile (3)

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -248,9 +248,6 @@ a.anchor {
   object-fit: contain;
   transform: scale(1.0);
   transition: transform 100ms ease-in;
-}
-
-.content-mobile-playbutton svg {
   display: block;
 }
 
